# docs/swagger.json
@@ -197,7 +197,50 @@
                 }
             }
         },
-        "/course": {
+        "/count": {
+            "get": {
+                "description": "get counts for each list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get Summery of counts",
+                "operationId": "get-count",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/course/:user_id": {
             "post": {
                 "description": "Creates a new course",
                 "consumes": [
@@ -244,16 +287,9 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Course ID",
-                        "name": "course_id",
+                        "description": "User ID",
+                        "name": "user_id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Teacher ID",
-                        "name": "teacher_id",
-                        "in": "query",
                         "required": true
                     }
                 ],
@@ -566,20 +602,6 @@
                 "summary": "List enrolments",
                 "operationId": "list-enrolments",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Student ID",
-                        "name": "student_id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Course ID",
-                        "name": "course_id",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "description": "Limit",
@@ -1123,7 +1145,7 @@
                 }
             }
         },
-        "/resource": {
+        "/resource/:material_id": {
             "post": {
                 "description": "Creates a new resource",
                 "consumes": [
@@ -1504,6 +1526,42 @@
                     }
                 }
             }
+        },
+        "/user/get": {
+            "get": {
+                "description": "Get an user by its username",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get an user details by username",
+                "operationId": "get-user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UserName",
+                        "name": "user_name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1519,10 +1577,7 @@
                     "type": "string"
                 },
                 "image": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
@@ -1663,10 +1718,7 @@
                     "type": "string"
                 },
                 "image": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
